--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.google.firebase:firebase-core:12.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     //adding the ZXING libarary
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
